--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
+<!DOCTYPE HTML>
 <html>
+<head>
+    <title>mrchief's world of programming
+    </title>
+    <link href="styles/index.css" rel="stylesheet" />
+</head>
+<body>
+    <header>
+       <a href="https://github.com/mrchief" title="plugged in to code"></a>
+    </header>
+
+</body>
 </html>
